--- a/frontend/addnewnote.html
+++ b/frontend/addnewnote.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes Taking App</title>
-    <link rel="stylesheet" href="notes.css">
-    <script src="script.js"></script>
-</head>
-<body>
-    <nav>
-        <ul class="navbarlinks">
-             <a href="homepage.html" class="name">Notes</a>
-            <button id="save" onclick="alert('Saved');">Save</button>
-        </ul>
-    </nav>
-    <div class="newnt">
-         <h5 class="tit">Title:</h5>
-        <textarea name="" id="" class="titbox" wrap="soft"></textarea>
-        
-        <h5 class="tit">Enter the text:</h5>
-        <textarea name="" id="notbox" wrap="soft"></textarea>
-    </div>
-    
-
-</body>
+    <link rel="stylesheet" href="notes.css" />
+    <script src="add_script.js"></script>
+  </head>
+  <body>
+    <form id="save_note">
+      <input
+        type="text"
+        id="title"
+        name="title"
+        placeholder="Task Title"
+        required
+      />
+      <textarea
+        id="description"
+        name="description"
+        placeholder="Description"
+        required
+      ></textarea>
+      <button type="submit">Save Task</button>
+    </form>
+  </body>
 </html>
