--- a/frontend/addnewnote.html
+++ b/frontend/addnewnote.html
@@ -3,26 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notes Taking App</title>
-    <link rel="stylesheet" href="notes.css" />
-    <script src="add_script.js"></script>
+    <title>Task Manager</title>
   </head>
   <body>
-    <form id="save_note">
-      <input
-        type="text"
-        id="title"
-        name="title"
-        placeholder="Task Title"
-        required
-      />
-      <textarea
-        id="description"
-        name="description"
-        placeholder="Description"
-        required
-      ></textarea>
-      <button type="submit">Save Task</button>
+    <h1>Add a Task</h1>
+    <form id="task-form">
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="title" required /><br /><br />
+
+      <label for="description">Description:</label>
+      <textarea id="description" name="description"></textarea><br /><br />
+
+      <button type="submit">Add Task</button>
     </form>
+
+    <script>
+      document
+        .getElementById("task-form")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault(); // Stop the form from reloading the page
+
+          const title = document.getElementById("title").value;
+          const description = document.getElementById("description").value;
+
+          const response = await fetch(
+            "http://127.0.0.1:8000/NT_App/addnote/",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ title: title, description: description }),
+            }
+          );
+
+          if (response.ok) {
+            alert("Task added successfully!");
+          } else {
+            alert("Error adding task.");
+          }
+        });
+    </script>
   </body>
 </html>
